# tk

./: .gitignore  Cargo.toml  README.md
.github/hooks/: pre-commit
.github/workflows/: ci.yml
auth/: Cargo.toml
auth/src/: config.rs  git_sign.rs  init.rs  lib.rs  public_key.rs  turnkey.rs  whoami.rs
auth/src/ssh/: agent.rs  git.rs  mod.rs  protocol.rs  wire.rs
auth/tests/: config_resolution.rs  ssh_agent.rs
docs/: consensus-demo.md  git-signing.md  ssh-agent.md
scripts/consensus-demo/: setup.sh  sign.sh  teardown.sh
ssh/: Cargo.toml
ssh/src/: agent.rs  git_sign.rs  lib.rs  public_key.rs
ssh/src/ssh/: mod.rs
ssh/tests/: public_key.rs  ssh_protocol.rs
tk/: Cargo.toml  README.md
tk/docs/: git-signing.md  ssh-agent.md
tk/examples/: consensus_demo.rs
tk/examples/consensus_demo/: README.md  main.rs  setup.sh  sign.sh  teardown.sh
tk/src/: cli.rs  main.rs
tk/src/commands/: activity.rs  agent.rs  config.rs  git_sign.rs  init.rs  keys.rs  mod.rs  policies.rs  public_key.rs  ssh.rs  users.rs  whoami.rs
tk/src/commands/agent/: daemon.rs  lock.rs  mod.rs
tk/tests/: activity_command.rs  agent_command.rs  cli.rs  config_command.rs  git_sign.rs  init_command.rs  public_key_command.rs  whoami_command.rs
