[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace]
members = ["auth", "ssh", "tk"]
resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
assert_cmd = { version = "2", default-features = false }
base64 = { version = "0.22.0", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["std", "derive", "help", "usage", "error-context", "env"], default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
predicates = { version = "3", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false }
tempfile = { version = "3.19.1", default-features = false }
tokio = { version = "=1.47.1", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
turnkey_api_key_stamper = { git = "https://github.com/tkhq/rust-sdk.git", rev = "a64ca2b0d3178089221b648f3365eb67def95219" }
turnkey_client = { git = "https://github.com/tkhq/rust-sdk.git", rev = "a64ca2b0d3178089221b648f3365eb67def95219" }
wiremock = { version = "0.6", default-features = false }
