[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace]
members = ["auth", "tk"]
resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
assert_cmd = { version = "2", default-features = false }
base64 = { version = "0.22.0", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["std", "derive", "help", "usage", "error-context", "env"], default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["std"] }
libc = { version = "0.2", default-features = false }
predicates = { version = "3", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.140", default-features = false, features = ["std"] }
sha2 = { version = "0.10", default-features = false }
tempfile = { version = "3.19.1", default-features = false }
tokio = { version = "=1.47.1", default-features = false }
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
turnkey_api_key_stamper = { version = "0.6.0", default-features = false }
turnkey_client = { version = "0.6.0", default-features = false }
wiremock = { version = "0.6", default-features = false }

[workspace.lints.rust]
dead_code = "warn"
unused_imports = "deny"
unused_variables = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow these pedantic lints that conflict with project style.
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
wildcard_imports = "allow"
