[package]
name = "turnkey_auth"
version = "0.0.0-alpha.0"
edition.workspace = true
license.workspace = true
description = "Turnkey backed auth library for SSH, Git signing, and related workflows"
repository = "https://github.com/tkhq/rust-sdk"
homepage = "https://turnkey.com"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "time"] }
toml = { workspace = true }
turnkey_api_key_stamper = { workspace = true }
turnkey_client = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
wiremock = { workspace = true }
