[package]
name = "tk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
libc = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs", "time", "process"] }
turnkey_auth = { path = "../auth" }

[lints]
workspace = true

[dev-dependencies]
assert_cmd = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
turnkey_api_key_stamper = { workspace = true }
wiremock = { workspace = true }
