[package]
name = "tk"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
libc = "0.2"
tokio = { workspace = true, features = ["fs", "macros", "process", "rt-multi-thread", "time"] }
turnkey_auth = { path = "../auth" }

[dev-dependencies]
assert_cmd = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
predicates = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "time"] }
turnkey_api_key_stamper = { workspace = true }
turnkey_client = { workspace = true }
wiremock = { workspace = true }
